--- a/Tetris/Tetris/Tetris.csproj
+++ b/Tetris/Tetris/Tetris.csproj
@@ -43,7 +43,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Block.cs" />
+    <Compile Include="GameDaoImpl.cs" />
     <Compile Include="GameManager.cs" />
+    <Compile Include="IGameDao.cs" />
     <Compile Include="Matrix.cs" />
     <Compile Include="SynchronousSocketListener.cs" />
     <Compile Include="Game.cs" />
